# master-thesis

./: .gitignore  CMakeLists.txt  script.py  script_prepare_data.py  solution_proof.py
analysis/: analysis_brkga.ipynb  analysis_gurobi.ipynb  analysis_heuristics.ipynb  anlysis_gap_heuristics_gurobi.ipynb  mdvrbsp vs (md)vrbsp.ipynb  statistics-vrbsp.ipynb  statistics.ipynb
codes-wo-cmake/decoder/: HeuristicBRKGA.cpp  HeuristicDecoder.cpp  MTRand.h  Makefile  compile_flags.txt  script_brkga.sh
decoder/: BRKGA.h  DifferentialEvolution.cpp  DifferentialEvolution.h  HeuristicBRKGA.cpp  HeuristicDecoder.cpp  HeuristicDecoder.cpp~  HeuristicDecoder.h  HeuristicDecoder.h~  Makefile  Makefile_2  decoder_brkga  script_brkga.sh
gurobi/: mainmodule.py  mdvrbsp_bigm.py  mdvrbsp_bigm_imp.py  mdvrbsp_bigm_imp2.py  mdvrbsp_linear1.py  mdvrbsp_linear1.py~  mdvrbsp_linear2.py  mdvrbsp_nonlinear.py  mdvrbsp_nonlinear.py~  mdvrbsp_quadvars_imp2.py  script-mdvrbsp-linear1.sh  script-mdvrbsp-linear2.sh  script-mdvrbsp.sh  script-vrbsp-mauricio.sh  script-vrbsp.sh  solution.sol  vrbsp_lin_impr.py  vrbsp_mauricio.py  vrbsp_new.py  vrbsp_scip.py  vrbsp_xijc.py  vrbsp_ybm.py  vrbsp_ybm_bigm.py
gurobi/cpp/: Makefile  compile_flags.txt  gurobitmp.cc  gurobitmp2.cc  header.h  mdvrbsp.cc  mdvrbsp_columngeneration.cc  script.sh  vrbsp.cc
gurobi/oldcode/: mdvrbsp_bigm_imp.py  mdvrbsp_quadvars_imp.py
include/: basic.h
instances/: README.md  generator.py
instances/dr/U_1024/: MD-VRBSP_U_1024_31.txt  MD-VRBSP_U_1024_32.txt  MD-VRBSP_U_1024_33.txt  MD-VRBSP_U_1024_34.txt
instances/dr/U_128/: MD-VRBSP_U_128_31.txt  MD-VRBSP_U_128_32.txt  MD-VRBSP_U_128_33.txt  MD-VRBSP_U_128_34.txt
instances/dr/U_16/: MD-VRBSP_U_16_31.txt  MD-VRBSP_U_16_32.txt  MD-VRBSP_U_16_33.txt  MD-VRBSP_U_16_34.txt
instances/dr/U_2048/: MD-VRBSP_U_2048_31.txt  MD-VRBSP_U_2048_32.txt  MD-VRBSP_U_2048_33.txt  MD-VRBSP_U_2048_34.txt
instances/dr/U_256/: MD-VRBSP_U_256_31.txt  MD-VRBSP_U_256_32.txt  MD-VRBSP_U_256_33.txt  MD-VRBSP_U_256_34.txt
instances/dr/U_32/: MD-VRBSP_U_32_31.txt  MD-VRBSP_U_32_32.txt  MD-VRBSP_U_32_33.txt  MD-VRBSP_U_32_34.txt
instances/dr/U_512/: MD-VRBSP_U_512_31.txt  MD-VRBSP_U_512_32.txt  MD-VRBSP_U_512_33.txt  MD-VRBSP_U_512_34.txt
instances/dr/U_64/: MD-VRBSP_U_64_31.txt  MD-VRBSP_U_64_32.txt  MD-VRBSP_U_64_33.txt  MD-VRBSP_U_64_34.txt
instances/dr/U_8/: MD-VRBSP_U_8_31.txt  MD-VRBSP_U_8_32.txt  MD-VRBSP_U_8_33.txt  MD-VRBSP_U_8_34.txt
instances/md-vrbsp/: hammer.py
instances/md-vrbsp/U_1024/: MD-VRBSP_U_1024_1.txt  MD-VRBSP_U_1024_10.txt  MD-VRBSP_U_1024_11.txt  MD-VRBSP_U_1024_12.txt  MD-VRBSP_U_1024_13.txt  MD-VRBSP_U_1024_14.txt  MD-VRBSP_U_1024_15.txt  MD-VRBSP_U_1024_16.txt  MD-VRBSP_U_1024_17.txt  MD-VRBSP_U_1024_18.txt  MD-VRBSP_U_1024_19.txt  MD-VRBSP_U_1024_2.txt  MD-VRBSP_U_1024_20.txt  MD-VRBSP_U_1024_21.txt  MD-VRBSP_U_1024_22.txt  MD-VRBSP_U_1024_23.txt  MD-VRBSP_U_1024_24.txt  MD-VRBSP_U_1024_25.txt  MD-VRBSP_U_1024_26.txt  MD-VRBSP_U_1024_27.txt  MD-VRBSP_U_1024_28.txt  MD-VRBSP_U_1024_29.txt  MD-VRBSP_U_1024_3.txt  MD-VRBSP_U_1024_30.txt  MD-VRBSP_U_1024_4.txt  MD-VRBSP_U_1024_5.txt  MD-VRBSP_U_1024_6.txt  MD-VRBSP_U_1024_7.txt  MD-VRBSP_U_1024_8.txt  MD-VRBSP_U_1024_9.txt  U_1024_1.txt  U_1024_10.txt  U_1024_11.txt  U_1024_12.txt  U_1024_13.txt  U_1024_14.txt  U_1024_15.txt  U_1024_16.txt  U_1024_17.txt  U_1024_18.txt  (+20 more)
instances/md-vrbsp/U_128/: MD-VRBSP_U_128_1.txt  MD-VRBSP_U_128_10.txt  MD-VRBSP_U_128_11.txt  MD-VRBSP_U_128_12.txt  MD-VRBSP_U_128_13.txt  MD-VRBSP_U_128_14.txt  MD-VRBSP_U_128_15.txt  MD-VRBSP_U_128_16.txt  MD-VRBSP_U_128_17.txt  MD-VRBSP_U_128_18.txt  MD-VRBSP_U_128_19.txt  MD-VRBSP_U_128_2.txt  MD-VRBSP_U_128_20.txt  MD-VRBSP_U_128_21.txt  MD-VRBSP_U_128_22.txt  MD-VRBSP_U_128_23.txt  MD-VRBSP_U_128_24.txt  MD-VRBSP_U_128_25.txt  MD-VRBSP_U_128_26.txt  MD-VRBSP_U_128_27.txt  MD-VRBSP_U_128_28.txt  MD-VRBSP_U_128_29.txt  MD-VRBSP_U_128_3.txt  MD-VRBSP_U_128_30.txt  MD-VRBSP_U_128_4.txt  MD-VRBSP_U_128_5.txt  MD-VRBSP_U_128_6.txt  MD-VRBSP_U_128_7.txt  MD-VRBSP_U_128_8.txt  MD-VRBSP_U_128_9.txt  (+30 more)
old_code_to_remove/decoder/: HeuristicBRKGA.cpp  Makefile  common.cpp  common.h  compile_flags.txt  main.cpp  scriptDE.sh  script_brkga.sh
old_code_to_remove/gurobi/: mainmodule.py  mdvrbsp_bigm_imp2.py  overlap.txt  script-vrbsp.sh  vrbsp_xijc_bigm.py  vrbsp_ybm_bigm.py
old_code_to_remove/vns/: Makefile  common.cc  common.h  mdvrbsp.cpp  mdvrbsp.h  script.sh  script_mdvrbsp.sh  script_vrbsp.sh  vrbsp.cpp
prof_ricardo/: alternative1.py  alternative2.py  alternative3.py  disj_prog.py  mainmodule.py  overlap.txt  vrbsp_ybm_bigm.py
src/: basic.cc  mdvrbsp.cc  mdvrbsp_col_gen.cc  vns.cc  vrbsp.cc  vrbsp_col_gen.cc  vrbsp_old.cc
vns/: Makefile  VNS.h  common.cc  common.h  compile_flags.txt  feasibility_check.cpp  md-vrbsp_vns  mdvrbsp.cpp  mdvrbsp_vns.cpp  params.prm  script_mdvrbsp.sh  script_vrbsp.sh  vrbsp.cpp  vrbsp_vns.cpp
(+731 files in other folders)
